--- a/MochaAi.html
+++ b/MochaAi.html
@@ -532,7 +532,7 @@
     const selectedCharacter = characterSelect.value;
 
     try {
-      const res = await fetch("http://localhost:8000/chat", {
+      const res = await fetch("/api/chat", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
