--- a/MochaAi.html
+++ b/MochaAi.html
@@ -534,7 +534,7 @@
     const selectedCharacter = characterSelect.value;
 
     try {
-      const res = await fetch("http://127.0.0.1:8000/chat", {
+      const res = await fetch("api/chat", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
